--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "laravel-mix": "^6.0.6",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
     }
