--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MOKA_DEALER_CODE=
+MOKA_USERNAME=
+MOKA_PASSWORD=
+
+TELEGRAM_API_TOKEN=
