--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
+        "milon/barcode": "^8.0",
         "niklasravnsborg/laravel-pdf": "^4.1"
     },
     "require-dev": {
